# miniros

./: CMakeLists.txt  MY_NOTES.txt  README.md  build.cmd  configure.cmd  regen.cmd
boot/bootdata/: CMakeLists.txt  hiveinst_xbox.inf  hivesys.inf  livecd.ini
drivers/: CMakeLists.txt
drivers/base/beep/: beep_reg.inf
drivers/base/kdgdb/: kdpacket.c
drivers/bus/isapnp/: isapnp_reg.inf
drivers/crypto/ksecdd/: ksecdd_reg.inf
drivers/filesystems/: CMakeLists.txt
drivers/filesystems/btrfs/: btrfs_reg.inf
drivers/filesystems/cdfs/: cdfs_reg.inf
drivers/filesystems/ext2/: ext2fs_reg.inf
drivers/filesystems/msfs/: msfs_reg.inf
drivers/filesystems/npfs/: npfs_reg.inf
drivers/filesystems/udfs/: udfs_reg.inf
drivers/filesystems/vfatfs/: vfatfs_reg.inf
drivers/input/: CMakeLists.txt
drivers/input/i8042prt/: i8042prt_reg.inf
drivers/input/kbdclass/: kbdclass_reg.inf
drivers/input/mouclass/: mouclass_reg.inf
drivers/multimedia/audio/mpu401_nt4/: mpu401_reg.inf
drivers/network/afd/: afd_reg.inf
drivers/storage/class/cdrom/: cdrom_reg.inf
drivers/storage/class/disk/: disk_reg.inf
drivers/storage/class/sfloppy/: sfloppy_reg.inf
drivers/storage/floppy/floppy/: floppy_reg.inf
drivers/storage/ide/uniata/: uniata_reg.inf
drivers/storage/partmgr/: partmgr_reg.inf
drivers/storage/port/buslogic/: buslogic_reg.inf
drivers/video/: CMakeLists.txt
drivers/video/watchdog/: CMakeLists.txt  watchdog.spec
media/: CMakeLists.txt  forwardcompatible.manifest  systemcompatible.manifest
media/doc/: COMMIT_TREE.txt  FREELDR_NEW_CLI.txt
psxss/psxdll/: CMakeLists.txt  psxdll.spec
psxss/psxss/: CMakeLists.txt  main.c  pch.h
pxss/: musl.cmake  (+1 more)
pxss/init/: CMakeLists.txt  init.c  pch.h
pxss/psxdll/: CMakeLists.txt  psxdll.h  syscalls.c
pxss/smss/: CMakeLists.txt  main.c
subsystems/posix/: CMakeLists.txt  HACKING_MUSL.MD
subsystems/posix/include/nt/: debug.h  syscalls.h  types.h
subsystems/posix/include/psx/: log.h  lxcore.h  process.h  sc_notes.txt  sclist.h  types.h
subsystems/posix/lxcore/: CMakeLists.txt  lock.c  lock.h  lxcore.rc  lxcore.spec  main.c  pch.h  pico.c  pico.h  ss.c  syscall.c  syscall.h  tags.h  utls.c  utls.h
subsystems/posix/lxcore/syscalls/: file.c  stub.c
subsystems/posix/lxss/: CMakeLists.txt  lnx32k.c  lnx32k.h  lock.c  lxss.rc  main.c  pch.h
subsystems/posix/psxdll/: CMakeLists.txt  MUSL_CHANGES.MD  ioctlsyscall.c  musl.cmake  ntsyscall.s  patching.txt  psxdll.rc  psxdll.spec  syscall.S
subsystems/posix/psxdll/musl/arch/generic/: syscall_arch.h
subsystems/posix/psxdll/musl/arch/i386/: crt_arch.h  reloc.h
subsystems/posix/psxdll/musl/crt/aarch64/: crti.s
subsystems/posix/psxdll/musl/crt/arm/: crti.s
subsystems/posix/psxdll/musl/crt/i386/: crti.s
subsystems/posix/psxdll/musl/crt/microblaze/: crti.s
subsystems/posix/psxdll/musl/crt/mips/: crti.s
subsystems/posix/psxdll/musl/crt/mips64/: crti.s
subsystems/posix/psxdll/musl/crt/or1k/: crti.s
subsystems/posix/psxdll/musl/crt/powerpc/: crti.s
subsystems/posix/psxdll/musl/crt/powerpc64/: crti.s
subsystems/posix/psxdll/musl/crt/s390x/: crti.s
subsystems/posix/psxdll/musl/crt/sh/: crti.s
subsystems/posix/psxdll/musl/crt/x32/: crti.s
subsystems/posix/psxdll/musl/src/errno/: __errno_location.c
subsystems/posix/psxdll/musl/src/fenv/aarch64/: fenv.s
subsystems/posix/psxdll/musl/src/fenv/arm/: fenv-hf.S
subsystems/posix/psxdll/musl/src/fenv/i386/: fenv.s
subsystems/posix/psxdll/musl/src/fenv/mips/: fenv.S
subsystems/posix/psxdll/musl/src/fenv/mipsn32/: fenv.S
subsystems/posix/psxdll/musl/src/fenv/powerpc/: fenv.S
subsystems/posix/psxdll/musl/src/fenv/riscv64/: fenv.S
subsystems/posix/psxdll/musl/src/fenv/sh/: fenv.S
subsystems/posix/psxdll/musl/src/fenv/x32/: fenv.s
subsystems/posix/psxdll/musl/src/fenv/x86_64/: fenv.s
subsystems/posix/psxdll/musl/src/include/: features.h
subsystems/posix/psxdll/musl/src/internal/i386/: defsysinfo.s
subsystems/posix/psxdll/musl/src/ldso/aarch64/: dlsym.s  tlsdesc.s
subsystems/posix/psxdll/musl/src/ldso/arm/: dlsym.s  tlsdesc.S
subsystems/posix/psxdll/musl/src/ldso/i386/: dlsym.s  dlsym_time64.S  tlsdesc.s
subsystems/posix/psxdll/musl/src/ldso/m68k/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/microblaze/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/mips/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/or1k/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/powerpc/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/powerpc64/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/riscv64/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/s390x/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/sh/: dlsym.s
subsystems/posix/psxdll/musl/src/ldso/x86_64/: dlsym.s  tlsdesc.s
subsystems/posix/psxdll/musl/src/math/i386/: acos.s  acosf.s  acosl.s  asin.s  asinf.s  asinl.s  atan.s  atan2.s  atan2f.s  atan2l.s  atanf.s  atanl.s  exp_ld.s  expl.s  floor.s  hypot.s  hypotf.s  log.s  log10.s  log10f.s  log10l.s  log1p.s  log1pf.s  log1pl.s  log2.s  log2f.s  log2l.s  logf.s  logl.s  remquo.s  scalbn.s  scalbnf.s  scalbnl.s
subsystems/posix/psxdll/musl/src/math/x32/: acosl.s  asinl.s  atan2l.s  atanl.s  exp2l.s  expl.s  fabs.s  fabsf.s  fabsl.s  floorl.s  fmodl.s  llrint.s  llrintf.s  llrintl.s  log10l.s  log1pl.s  log2l.s  logl.s  lrint.s  lrintf.s  lrintl.s  remainderl.s  rintl.s  sqrt.s  sqrtf.s  sqrtl.s
subsystems/posix/psxdll/musl/src/math/x86_64/: acosl.s  asinl.s  atan2l.s  atanl.s  exp2l.s  expl.s  floorl.s  log10l.s  log1pl.s  log2l.s  logl.s
subsystems/posix/psxdll/musl/src/process/arm/: vfork.s
subsystems/posix/psxdll/musl/src/process/i386/: vfork.s
subsystems/posix/psxdll/musl/src/process/s390x/: vfork.s
subsystems/posix/psxdll/musl/src/process/sh/: vfork.s
subsystems/posix/psxdll/musl/src/process/x32/: vfork.s
subsystems/posix/psxdll/musl/src/process/x86_64/: vfork.s
subsystems/posix/psxsc/: CMakeLists.txt  file.c  main.c  psxsc.rc  psxsc.spec  stdafx.h
subsystems/posix/psxss/: CMakeLists.txt  api.c  psxss.c  psxss.rc
subsystems/posix/simple/: CMakeLists.txt  simple.c
(+165 files in other folders)
