
PROJECT(Drivers)

add_subdirectory(base)
add_subdirectory(battery)
add_subdirectory(bus)
add_subdirectory(filesystems)
add_subdirectory(hid)
add_subdirectory(input)
add_subdirectory(processor)
#add_subdirectory(sac)
add_subdirectory(serial)
add_subdirectory(setup)
add_subdirectory(storage)
add_subdirectory(usb)
add_subdirectory(wmi)
